// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureExportButton should match snapshot should match snapshot with children passed. 1`] = `
<div
  className="rs-feature-export-button"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <div>
    Foo
  </div>
</div>
`;

exports[`FeatureExportButton should match snapshot should match snapshot with cutom attributes. 1`] = `
<div
  className="foo"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={2}
  title="bar"
/>
`;

exports[`FeatureExportButton should match snapshot with default attributes. 1`] = `
<div
  className="rs-feature-export-button"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
/>
`;

exports[`FeatureExportButton triggers onClick #createFeatureString() using KMLFormat should export kml by default. 1`] = `
<kml xmlns="http://www.opengis.net/kml/2.2"
     xmlns:gx="http://www.google.com/kml/ext/2.2"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemalocation="http://www.opengis.net/kml/2.2 https://developers.google.com/kml/schema/kml22gx.xsd"
>
  <Document>
    <name>
      ExportLayer
    </name>
    <Placemark>
      <Style>
        <IconStyle>
        <scale>2
        </scale>
        <Icon>
        <href>https://openlayers.org/en/latest/examples/data/icon.png
        </href>
        </Icon>
        </IconStyle>
      </Style>
      <Point>
        <coordinates>
          7.358136177061042,48.07903229472336
        </coordinates>
      </Point>
    </Placemark>
  </Document>
</kml>
`;
